turtleart.diskfour.DiskFour.scala.error
Compilation error:
DiskFour:8: error: not found: value RED
      setColor(RED)
               ^DiskFour:14: error: not found: value YELLOW
      setColor(YELLOW)
               ^DiskFour:20: error: not found: value PINK
      setColor(PINK)
               ^