turtleart.diskfour.DiskFour.scala.code
override def run() {
    for(x<-1 to 90){
    forward(100)
    backward(100)
    right(1)
  }
    for(x<-1 to 90){
      setColor(RED)
    forward(100)
    backward(100)
    right(1)
  }
    for(x<-1 to 90){
      setColor(YELLOW)
    forward(100)
    backward(100)
    right(1)
  }
    for(x<-1 to 90){
      setColor(PINK)
    forward(100)
    backward(100)
    right(1)
  }
}